<?xml version="1.0" encoding="utf-8"?>
<!--
    @author Lars Harmsen
    Copyright (c) <2014> <Lars Harmsen - Quchen>
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="30dp" >

    <TextView
        android:id="@+id/tv_current_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_current_score"
        android:layout_centerHorizontal="true"
        android:text="@string/defaultscore"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_best_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_best_score"
        android:layout_centerHorizontal="true"
        android:text="@string/defaultscore"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/current_score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/medaille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_current_score_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/medaille"
        android:src="@drawable/gold" />

    <TextView
        android:id="@+id/tv_best_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medaille"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/best_score"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/b_ok"
        style="@style/PrettyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_best_score_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/greybutton"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/b_revive"
        style="@style/PrettyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/b_ok"
        android:layout_marginTop="15dp"
        android:background="@drawable/greybutton"
        android:text="@string/revive_button" />

    <TextView
        android:id="@+id/revive_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_revive"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/revive_notice" />

</RelativeLayout>